# krb525

./: BUILDING  ChangeLog  INSTALLATION  Makefile.in  README  README.html  acconfig.h  auth_con.c  auth_con.h  client.c  configure.in  k5_db.c  k5_db.h  krb525.1  krb525.conf  krb525.conf.5  krb525.h  krb525_check_conf.1  krb525_check_conf.c  krb525d.8  netio.c  netio.h  parse_conf.c  parse_conf.h  server.c  server.h  srv_conf.c  srv_conf.h  version.h
tests/: configure.in  test-conf.sh.in  test.conf.in
