dnl
dnl configure.in for krb525
dnl
dnl $Id: configure.in,v 1.1 1997/09/08 15:41:32 vwelch Exp $
dnl
AC_INIT(krb525.h)
dnl
dnl
dnl Get the prefix from the location of "kinit"
dnl
AC_PREFIX_PROGRAM(kinit)
dnl
dnl
AC_CACHE_CHECK([cc],
  [krb525_cv_cc],
  [AC_ARG_WITH([cc],
     [  --with-cc=CC            Specify the compiler to use],
     [krb525_cv_cc=${withval}],
     [krb525_cv_cc=cc])
  ])
dnl
CC=${krb525_cv_cc}
dnl
dnl
AC_CACHE_CHECK([ccopts],
  [krb525_cv_ccopts],
  [AC_ARG_WITH([ccopts],
     [  --with-ccopts=OPTS      Specify the compiler options to use],
     [krb525_cv_ccopts=${withval}],
     [krb525_cv_ccopts=""])
  ])
dnl
CCOPTS=${krb525_cv_ccopts}
dnl
dnl
AC_CACHE_CHECK([krb5 path],
  [krb525_cv_krb5_path],
  [AC_ARG_WITH(krb5,
    [  --with-krb5=PATH        Location of Kerberos 5 libraries and include files],
    [krb525_cv_krb5_path=${withval}],
    [krb525_cv_krb5_path=${prefix}])
  ])
dnl
krb5dir=${krb525_cv_krb5_path}
dnl
dnl
AC_CACHE_CHECK([krb5 obj path],
  [krb525_cv_krb5_obj_path],
  [AC_ARG_WITH(krb5-obj,
    [  --with-krb5-obj=PATH        Location of Kerberos 5 build directory],
    [krb525_cv_krb5_obj_path=${withval}],
    [krb525_cv_krb5_obj_path=${prefix}])
  ])
dnl
krb5objdir=${krb525_cv_krb5_obj_path}
dnl
dnl
AC_CACHE_CHECK([krb5 src path],
  [krb525_cv_krb5_src_path],
  [AC_ARG_WITH(krb5-src,
    [  --with-krb5-src=PATH        Location of Kerberos 5 source directory],
    [krb525_cv_krb5_src_path=${withval}],
    [krb525_cv_krb5_src_path=${prefix}])
  ])
dnl
krb5srcdir=${krb525_cv_krb5_src_path}
dnl
dnl
AC_CACHE_CHECK([install path],
  [krb525_cv_install_path],
  [AC_ARG_WITH(install-path,
    [  --with-install-path=PATH    Target installation path],
    [krb525_cv_install_path=${withval}],
    [krb525_cv_install_path=${prefix}])
  ])
dnl
INSTALLPATH=${krb525_cv_install_path}
AC_DEFINE_UNQUOTED(INSTALLPATH, "$INSTALLPATH")
dnl
dnl
K5LIBPATH=-L${krb5dir}/lib
K5INCPATH="-I${krb5dir}/include -I${krb5objdir}/include -I${krb5objdir}/include/krb5 -I${krb5srcdir}/include -I${krb5srcdir}/include/krb5"
K5OBJPATH=${krb5objdir}
dnl
dnl
dnl Check to see if we need "netlibs" (specifically, libnsl and libsocket)
dnl
uname=`(uname) 2>/dev/null`
if test "$uname" != IRIX -a "$uname" != IRIX64 ; then
	AC_CHECK_LIB(socket, socket,
[	SYSLIBS="$SYSLIBS -lsocket"], ,-lnsl)
	AC_CHECK_LIB(nsl, t_bind,
[	SYSLIBS="$SYSLIBS -lnsl"])
fi
dnl
AC_SUBST(CC)
AC_SUBST(CCOPTS)
AC_SUBST(K5LIBPATH)
AC_SUBST(K5INCPATH)
AC_SUBST(K5OBJPATH)
AC_SUBST(SYSLIBS)
AC_SUBST(INSTALLPATH)
dnl
AC_OUTPUT(Makefile)